--- a/notebooks/TimeFunctions/times.ipynb
+++ b/notebooks/TimeFunctions/times.ipynb
@@ -32,6 +32,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "122f2da1-b6c9-4010-b9e3-75dbe86ac2f1",
    "metadata": {
     "ExecuteTime": {
@@ -39,23 +40,22 @@
      "start_time": "2024-08-22T13:46:08.167974Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diive version: v0.82.1\n"
+     ]
+    }
+   ],
    "source": [
     "import importlib.metadata\n",
     "from datetime import datetime\n",
     "\n",
     "version_diive = importlib.metadata.version(\"diive\")\n",
     "print(f\"diive version: v{version_diive}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "diive version: v0.79.0\n"
-     ]
-    }
-   ],
-   "execution_count": 9
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,6 +70,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "a02fa159-3a48-43aa-9aaa-e2f471e7b2dd",
    "metadata": {
     "ExecuteTime": {
@@ -77,24 +78,23 @@
      "start_time": "2024-08-22T13:46:08.301737Z"
     }
    },
-   "source": [
-    "from diive.core.times.times import current_unixtime\n",
-    "\n",
-    "current_unixtime()"
-   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1724334368303732800"
+       "1726825836214695300"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "source": [
+    "from diive.core.times.times import current_unixtime\n",
+    "\n",
+    "current_unixtime()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,6 +106,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "20a61333-9d40-4695-ab5b-7401512d4c8e",
    "metadata": {
     "ExecuteTime": {
@@ -113,24 +114,23 @@
      "start_time": "2024-08-22T13:46:08.430979Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current datetime as datetime: 2024-09-20 11:50:36.224699\n",
+      "Current datetime as string: 2024-09-20 11:50:36\n"
+     ]
+    }
+   ],
    "source": [
     "from diive.core.times.times import current_datetime\n",
     "\n",
     "a, b = current_datetime()\n",
     "print(f\"Current datetime as datetime: {a}\")\n",
     "print(f\"Current datetime as string: {b}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current datetime as datetime: 2024-08-22 15:46:08.434993\n",
-      "Current datetime as string: 2024-08-22 15:46:08\n"
-     ]
-    }
-   ],
-   "execution_count": 11
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,6 +143,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "d46e6ac3-5183-4741-bd0b-b397b110ca24",
    "metadata": {
     "ExecuteTime": {
@@ -150,24 +151,23 @@
      "start_time": "2024-08-22T13:46:08.529960Z"
     }
    },
-   "source": [
-    "from diive.core.times.times import current_datetime_str_condensed\n",
-    "\n",
-    "current_datetime_str_condensed()"
-   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20240822154608'"
+       "'20240920115036'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "source": [
+    "from diive.core.times.times import current_datetime_str_condensed\n",
+    "\n",
+    "current_datetime_str_condensed()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,6 +180,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "id": "010feca7-6430-44be-8851-b04540a574d1",
    "metadata": {
     "ExecuteTime": {
@@ -187,24 +188,23 @@
      "start_time": "2024-08-22T13:46:08.578948Z"
     }
    },
-   "source": [
-    "from diive.core.times.times import current_time_microseconds_str\n",
-    "\n",
-    "current_time_microseconds_str()"
-   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'154608579946'"
+       "'115036255741'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "source": [
+    "from diive.core.times.times import current_time_microseconds_str\n",
+    "\n",
+    "current_time_microseconds_str()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,6 +217,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "id": "70799633-ef8b-4d0c-872b-a4f86760b539",
    "metadata": {
     "ExecuteTime": {
@@ -224,27 +225,27 @@
      "start_time": "2024-08-22T13:46:08.634043Z"
     }
    },
-   "source": [
-    "from diive.core.times.times import make_run_id\n",
-    "\n",
-    "make_run_id()"
-   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'RUN-20240822-154608'"
+       "'RUN-20240920-115036'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "source": [
+    "from diive.core.times.times import make_run_id\n",
+    "\n",
+    "make_run_id()"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "id": "2c41cf9d-3d57-4cbb-8c15-66cb7d01d7fe",
    "metadata": {
     "ExecuteTime": {
@@ -252,22 +253,21 @@
      "start_time": "2024-08-22T13:46:08.701846Z"
     }
    },
-   "source": [
-    "make_run_id(prefix=\"MYSCRIPT\")"
-   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MYSCRIPT-20240822-154608'"
+       "'MYSCRIPT-20240920-115036'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "source": [
+    "make_run_id(prefix=\"MYSCRIPT\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,31 +281,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "id": "3f784457-e244-421b-b789-08481c2d9f9f",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2024-08-22T13:46:08.776866Z",
      "start_time": "2024-08-22T13:46:08.763875Z"
-    }
+    },
+    "tags": []
    },
-   "source": [
-    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "print(f\"Finished {dt_string}\")"
-   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-08-22 15:46:08\n"
+      "Finished 2024-09-20 11:50:36\n"
      ]
     }
    ],
-   "execution_count": 16
+   "source": [
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "1fe40c15-b07c-4e8c-b6be-dc6a2060aa71",
    "metadata": {
     "ExecuteTime": {
@@ -313,9 +314,8 @@
      "start_time": "2024-08-22T13:46:08.824714Z"
     }
    },
-   "source": [],
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
@@ -334,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
