--- a/notebooks/TimeStamps/Detect_time_resolution.ipynb
+++ b/notebooks/TimeStamps/Detect_time_resolution.ipynb
@@ -36,13 +36,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2024-08-22T13:46:15.036834Z",
      "start_time": "2024-08-22T13:46:12.458429Z"
-    }
+    },
+    "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diive version: v0.82.1\n"
+     ]
+    }
+   ],
    "source": [
     "import importlib.metadata\n",
     "from datetime import datetime\n",
@@ -52,17 +62,7 @@
     "\n",
     "version_diive = importlib.metadata.version(\"diive\")\n",
     "print(f\"diive version: v{version_diive}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "diive version: v0.79.0\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,30 +73,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:15.255108Z",
+     "start_time": "2024-08-22T13:46:15.062796Z"
+    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "tags": [],
-    "ExecuteTime": {
-     "end_time": "2024-08-22T13:46:15.255108Z",
-     "start_time": "2024-08-22T13:46:15.062796Z"
-    }
+    "tags": []
    },
-   "source": [
-    "data_df = load_exampledata_parquet()"
-   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.079 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.045 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     }
    ],
-   "execution_count": 2
+   "source": [
+    "data_df = load_exampledata_parquet()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,20 +107,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:15.366328Z",
+     "start_time": "2024-08-22T13:46:15.335896Z"
+    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "tags": [],
-    "ExecuteTime": {
-     "end_time": "2024-08-22T13:46:15.366328Z",
-     "start_time": "2024-08-22T13:46:15.335896Z"
-    }
+    "tags": []
    },
-   "source": [
-    "f = DetectFrequency(index=data_df.index, verbose=True)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -136,7 +134,9 @@
      ]
     }
    ],
-   "execution_count": 3
+   "source": [
+    "f = DetectFrequency(index=data_df.index, verbose=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,21 +147,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:15.445633Z",
+     "start_time": "2024-08-22T13:46:15.435146Z"
+    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "tags": [],
-    "ExecuteTime": {
-     "end_time": "2024-08-22T13:46:15.445633Z",
-     "start_time": "2024-08-22T13:46:15.435146Z"
-    }
+    "tags": []
    },
-   "source": [
-    "freq = f.get()\n",
-    "freq"
-   ],
    "outputs": [
     {
      "data": {
@@ -174,7 +171,10 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "source": [
+    "freq = f.get()\n",
+    "freq"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -187,39 +187,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2024-08-22T13:46:15.555853Z",
      "start_time": "2024-08-22T13:46:15.547875Z"
-    }
+    },
+    "tags": []
    },
-   "source": [
-    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "print(f\"Finished {dt_string}\")"
-   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-08-22 15:46:15\n"
+      "Finished 2024-09-20 11:50:15\n"
      ]
     }
    ],
-   "execution_count": 5
+   "source": [
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-22T13:46:15.648897Z",
      "start_time": "2024-08-22T13:46:15.636640Z"
     }
    },
-   "source": [],
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
