--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 7 Nov 2024  \n",
+    "**Last updated**: 26 Nov 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -110,7 +110,7 @@
    "id": "8ceb3736-b947-4578-bbd5-0d106147cffd",
    "metadata": {},
    "source": [
-    "- <b>NEW!</b> [Find and correct offset between two time series](Corrections/MeasurementOffset.ipynb)\n",
+    "- [Find and correct offset between two time series](Corrections/MeasurementOffset.ipynb)\n",
     "- [Wind direction offset correction](Corrections/WindDirectionOffset.ipynb)"
    ]
   },
@@ -136,7 +136,7 @@
    "id": "ef05062b-d379-4509-b02b-f9e6978c1083",
    "metadata": {},
    "source": [
-    "- <b>NEW!</b> [BinFitterCP](Fits/BinFitterCP.ipynb): Fit function to binned data, including confidence and prediction interval"
+    "- [BinFitterCP](Fits/BinFitterCP.ipynb): Fit function to binned data, including confidence and prediction interval"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "source": [
     "\n",
     "- [Linear interpolation](GapFilling/LinearInterpolation.ipynb)\n",
-    "- <b>NEW!</b> [MDS gap-filling of ecosystem fluxes](GapFilling/FluxMDSGapFilling.ipynb): approach by [Reichstein et al., 2005](https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2486.2005.001002.x)\n",
+    "- <b>NEW!</b> <b>UPDATED!</b> [MDS gap-filling of ecosystem fluxes](GapFilling/FluxMDSGapFilling.ipynb): approach by [Reichstein et al., 2005](https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2486.2005.001002.x)\n",
     "- [Random forest parameter optimization](GapFilling/RandomForestParamOptimization.ipynb)\n",
     "- [Random forest gap-filling](GapFilling/RandomForestGapFilling.ipynb)\n",
     "- <b>NEW!</b> [Random forest long-term gap-filling](GapFilling/LongTermRandomForestGapFilling.ipynb)\n",
@@ -285,16 +285,16 @@
     "- [Absolute limits](OutlierDetection/AbsoluteLimits.ipynb)\n",
     "- [Incremental z-score: Identify outliers based on the z-score of double increments](OutlierDetection/zScoreIncremental.ipynb)\n",
     "- [Local outlier factor across all data](OutlierDetection/LocalOutlierFactorAllData.ipynb)\n",
-    "- <b>NEW!</b> [Local outlier factor across, separately for daytime and nighttime](OutlierDetection/LocalOutlierFactorDaytimeNighttime.ipynb)\n",
+    "- [Local outlier factor across, separately for daytime and nighttime](OutlierDetection/LocalOutlierFactorDaytimeNighttime.ipynb)\n",
     "- [Local standard deviation](OutlierDetection/LocalSD.ipynb)\n",
-    "- <b>NEW!</b> [Missing values flag](OutlierDetection/MissingValues.ipynb)\n",
-    "- <b>NEW!</b> [Manual removal of time periods (from-to) or single records from time series](OutlierDetection/ManualRemoval.ipynb)\n",
-    "- <b>NEW!</b> [Hampel filter](OutlierDetection/Hampel.ipynb)\n",
-    "- <b>NEW!</b> [Hampel filter separately for daytime and nighttime data](OutlierDetection/HampelDaytimeNighttime.ipynb)\n",
-    "- <b>NEW!</b> [Trim data](OutlierDetection/TrimLow.ipynb)\n",
-    "- <b>NEW!</b> [z-score](OutlierDetection/zScore.ipynb) \n",
-    "- <b>NEW!</b> [z-score separately on daytime and nighttime data](OutlierDetection/zScoreDaytimeNighttime.ipynb)\n",
-    "- <b>NEW!</b> [z-score in a rolling time window](OutlierDetection/zScoreRolling.ipynb)"
+    "- [Missing values flag](OutlierDetection/MissingValues.ipynb)\n",
+    "- [Manual removal of time periods (from-to) or single records from time series](OutlierDetection/ManualRemoval.ipynb)\n",
+    "- [Hampel filter](OutlierDetection/Hampel.ipynb)\n",
+    "- [Hampel filter separately for daytime and nighttime data](OutlierDetection/HampelDaytimeNighttime.ipynb)\n",
+    "- [Trim data](OutlierDetection/TrimLow.ipynb)\n",
+    "- [z-score](OutlierDetection/zScore.ipynb) \n",
+    "- [z-score separately on daytime and nighttime data](OutlierDetection/zScoreDaytimeNighttime.ipynb)\n",
+    "- [z-score in a rolling time window](OutlierDetection/zScoreRolling.ipynb)"
    ]
   },
   {
@@ -318,12 +318,12 @@
    "id": "3f12e3ac-15eb-4dcb-bbbc-4652149b25d9",
    "metadata": {},
    "source": [
-    "- <b>NEW!</b> [Cumulative sums across all data](Plotting/Cumulative.ipynb)\n",
-    "- <b>NEW!</b> [Cumulatives per year](Plotting/CumulativesPerYear.ipynb)\n",
+    "- [Cumulative sums across all data](Plotting/Cumulative.ipynb)\n",
+    "- [Cumulatives per year](Plotting/CumulativesPerYear.ipynb)\n",
     "- [Diel cycle per month](Plotting/DielCycle.ipynb) (for calculating diel cycles without plotting see Resampling/[Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb))\n",
     "- [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
     "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
-    "- <b>NEW!</b> [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
+    "- [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
     "- [Scatter plot with bins](Plotting/ScatterXY.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
